<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="firstSelected"
                android:text="@string/first_dialog"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="secondSelected"
                android:text="@string/second_dialog"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="thirdSelected"
                android:text="@string/third_dialog"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="fourthSelected"
                android:text="@string/fourth_dialog"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="fifthSelected"
                android:text="@string/fifth_dialog"
                app:backgroundTint="@color/cardview_dark_background" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

    </LinearLayout>

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="10" />
</LinearLayout>